--- a/public/css/component/side.css
+++ b/public/css/component/side.css
@@ -18,7 +18,7 @@
 	width: 60px;
 	height: 60px;
 	border-radius: 99px;
-	background-color: #2e3047;
+	background-color: #1C6758;
 	cursor: pointer;
 }
 
@@ -66,7 +66,7 @@
 	flex: 1 1 0;
 	max-width: 300px;
 	padding: 2rem 1rem;
-	background-color: #2e3047;
+	background-color: #1C6758;
 }
 
 .sidebar h3 {
